Fixed many things on mobile

--- a/src/app/category/components/category-detail/category-detail.component.css
+++ b/src/app/category/components/category-detail/category-detail.component.css
@@ -122,18 +122,80 @@ h4.rebate-text {
     line-height: 2.2rem;
 }
 
-/* Small devices (landscape phones, less than 768px) */
-@media (max-width: 767px) {
-    /*h4.rebate-text {*/
-    /*    font-family: var(--sans-serif);*/
-    /*    font-size: 1rem;*/
-    /*    vertical-align: middle;*/
-    /*}*/
+/* Mobile */
+@media (max-width: 769px) {
+    .cat-detail {
+        margin-top: 3rem;
+        padding-bottom: 2rem;
+    }
 
-    /*.img-url-icon > i {*/
-    /*    color: var(--gum);*/
-    /*    font-size: 2rem;*/
-    /*    display: inline-block;*/
-    /*    padding-top: 0.5rem;*/
-    /*}*/
+    .icon-img > i {
+        font-size: 5rem;
+        padding-top: 0;
+    }
+
+    h1.title {
+        font-size: 2rem;
+        font-family: var(--sans-serif-bold);
+    }
+
+    p.body {
+        font-size: 1rem;
+        font-family: var(--sans-serif);
+    }
+
+    /* Text Image Overlay */
+    .page-cards-section {
+        background-color: var(--cloud);
+        padding: 0 0 2rem 0;
+    }
+
+    .page-cards-section > .container-fluid {
+        margin: 0;
+    }
+
+
+    .page-caption {
+        position: relative;
+        padding: 0;
+        margin: 0;
+    }
+
+    .page-caption > img.category {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+
+    .page-caption:after {
+        content: "";
+        position: absolute;
+        display: block;
+        left: 0;
+        top: 0;
+        width: 300px;
+        height: 100%;
+        background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 0px, var(--gum-rgb) 100%) repeat 0 0;
+        z-index: 1;
+    }
+
+    .page-caption-text {
+        font-family: var(--sans-serif-bold);
+        font-size: 2rem;
+        display: block;
+        position: absolute;
+        width: auto;
+        color: #fff;
+        left: 0;
+        bottom: 0;
+        padding: 1em;
+        z-index: 2;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        white-space: pre-wrap;
+        max-width: 300px;
+        line-height: 2.2rem;
+    }
+
+
 }
