--- a/src/app/home/components/home.component.css
+++ b/src/app/home/components/home.component.css
@@ -147,3 +147,79 @@ p.section-four-text-bottom {
     max-width: 200px;
 }
 
+
+/* Mobile */
+@media (max-width: 769px) {
+    .ibd-cat {
+        background-color: var(--gum);
+        margin: 0 0 18px 0;
+        width: 100%;
+        height: 150px;
+        min-height: 150px;
+        border-radius: 2px;
+        display: inline-block;
+        position: relative;
+        /*background: url();*/
+        background-size: cover;
+        background-position: center;
+    }
+
+    /* Text Image Overlay */
+    .caption, .caption-right {
+        position: relative;
+        padding: 0;
+        margin: 0;
+    }
+
+    .caption > img.category, .caption-right > img.category {
+        display: block;
+        width: 300px;
+        height: 200px;
+    }
+
+    .caption:after, .caption-right:after {
+        content: "";
+        position: absolute;
+        display: block;
+        left: 0;
+        top: 0;
+        width: 300px;
+        height: 200px;
+        background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 0px, var(--gum-rgb) 100%) repeat 0 0;
+        z-index: 1;
+    }
+
+    .caption-right:after {
+        content: "";
+        position: absolute;
+        display: block;
+        left: 0;
+        top: 0;
+        width: 300px;
+        height: 200px;
+        background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 0px, var(--water-rgb) 100%) repeat 0 0;
+        z-index: 1;
+    }
+
+    .caption-text {
+        font-family: var(--sans-serif-bold) !important;
+        font-size: 2rem;
+        display: block;
+        position: absolute;
+        width: 300px;
+        color: #fff;
+        left: 0;
+        bottom: 0;
+        padding: 1em;
+        z-index: 2;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+
+
+}
+
+/* Small devices (landscape phones, less than 768px) */
+/*@media (max-width: 767px) {*/
+
+/*}*/
